# MLOps

./: .gitignore  README.m_  commands.py  pyproject.toml
MNIST/conf/: config.yaml  infer_config.yaml
MNIST/fbp/: data.py  model.py
data/MNIST/raw/: .gitignore  t10k-images-idx3-ubyte.dvc  t10k-labels-idx1-ubyte.dvc  train-images-idx3-ubyte.dvc  train-labels-idx1-ubyte.dvc
