[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Creator11-111"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
lightning = "^2.1.3"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
torchvision = "^0.16.2"
fire = "^0.5.0"
mlflow = "^2.9.2"
tensorboard = "^2.15.1"
natsort = "^8.4.0"


[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["MNIST"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
